WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
56374
HTMLMediaElement::mediaPlayerPlaybackStateChanged should not change the "public" state of the element if it's an internal pause for example.
https://bugs.webkit.org/show_bug.cgi?id=56374
Summary
HTMLMediaElement::mediaPlayerPlaybackStateChanged should not change the "publ...
Alexis Menard (darktears)
Reported
2011-03-15 07:48:15 PDT
In case of an internal pause (i.e. it's not reflected in the DOM) the callback HTMLMediaElement::mediaPlayerPlaybackStateChanged should not change the state of the element. We should not call playInternal or pauseInternal because they can change the status of the element.
Attachments
Proposed patch.
(1.33 KB, patch)
2011-03-15 07:51 PDT
,
Alexis Menard (darktears)
no flags
Details
Formatted Diff
Diff
updated Changelog.
(1.36 KB, patch)
2011-03-15 08:01 PDT
,
Alexis Menard (darktears)
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Alexis Menard (darktears)
Comment 1
2011-03-15 07:51:16 PDT
Created
attachment 85804
[details]
Proposed patch.
Alexis Menard (darktears)
Comment 2
2011-03-15 08:01:58 PDT
Created
attachment 85805
[details]
updated Changelog.
WebKit Commit Bot
Comment 3
2011-03-15 10:32:44 PDT
Comment on
attachment 85805
[details]
updated Changelog. Clearing flags on attachment: 85805 Committed
r81145
: <
http://trac.webkit.org/changeset/81145
>
WebKit Commit Bot
Comment 4
2011-03-15 10:32:47 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug